--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "homepage": "https://github.com/php-kit/php-web-console",
   "require": {
     "psr/http-message": "*",
-    "psr/log": "*"
+    "psr/log": "^2.0"
   },
   "suggest": {
     "monolog/monolog": "You can redirect Monolog logging output to a Debug Console panel, or vice-versa"
